Fixed minor pages issues (bugs), added delete comment logic, guarded routes for components which should be not visible for not logged in users, notification after guarded component redirection added (user should be logged in for full access)

--- a/src/components/CustomerStories/ReadStories/StoryCard/SeeMoreStoryDetails/Comment/Comment.css
+++ b/src/components/CustomerStories/ReadStories/StoryCard/SeeMoreStoryDetails/Comment/Comment.css
@@ -8,3 +8,12 @@
 .comment-text {
     margin: 0;
 }
+
+.delete-comment-box {
+    text-align: right;
+}
+
+.delete-comment-box .delete-comment-btn {
+    border-radius: 30px;
+    margin: 15px 0;
+}
