--- a/src/components/CustomerStories/ReadStories/StoryCard/SeeMoreStoryDetails/SeeMoreStoryDetails.css
+++ b/src/components/CustomerStories/ReadStories/StoryCard/SeeMoreStoryDetails/SeeMoreStoryDetails.css
@@ -12,6 +12,7 @@
 .like-wrapper {
   text-align: right;
   padding-right: 50px !important;
+  margin-top: 25px !important;
 }
 
 .likes-box {
@@ -21,4 +22,13 @@
 
 .add-comment-btn {
   border: 1px solid;
+}
+
+.log-in-warning-box {
+  text-align: center;
+  background-color: yellow;
+  margin: 0 -16px 0 -16px;
+  padding: 15px;
+  text-transform: uppercase;
+  font-size: 15px !important;
 }
